--- a/index.css
+++ b/index.css
@@ -1,168 +1,183 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 /* Main Format */
 
 body {
-font-family: 'Red Hat Display', sans-serif;
+    font-family: 'Red Hat Display', sans-serif;
     margin: auto;
-        margin: 0;
-        padding: 0;
-            background-color: hsl(0, 0%, 98%);
+    margin: 0;
+    padding: 0;
+    background-color: hsl(0, 0%, 98%);
 
 }
+
 main {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  flex-direction: column;
-      overflow: hidden;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    flex-direction: column;
+    overflow: hidden;
 }
 
 /* Sub Format */
 
-.section1{
-display: flex;
-justify-content: center;
-flex-direction: column;
-align-items: center;
+.section1 {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
-.logo{
+.logo {
     padding-top: 5rem;
 }
-.section1subsection{
-display: flex;
-padding-top: 3.8rem;
+
+.section1subsection {
+    display: flex;
+    padding-top: 3.8rem;
 }
-.section1imagetablet{
+
+.section1imagetablet {
     display: none;
 }
-.imagedesk1{
+
+.imagedesk1 {
     position: relative;
     right: 30px;
     height: 303px;
 }
 
-.imagedesk2{
+.imagedesk2 {
     position: relative;
     left: 30px;
-        height: 303px;
+    height: 303px;
+    margin-top: 3.4rem;
+
 }
-.mainText{
+
+.mainText {
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    padding: 0 5rem 0 5rem;
-}
-.buttons{
-    padding-top: 2rem;
+    padding: 0 4rem;
 }
 
-.button1, .button2{
-border-radius: 29px;
-color: white;
-font-weight:700;
-font-size: 1rem; 
-border: none;
+.buttons {
+    padding-top: 0.9rem
 }
 
-.button1{
-background-color:hsl(192, 37%, 48%);
-margin-right: .5rem;
+.button1,
+.button2 {
+    border-radius: 29px;
+    color: white;
+    font-weight: 700;
+    font-size: 1rem;
+    border: none;
+}
+
+.button1 {
+    background-color: hsl(192, 37%, 48%);
+    margin-right: .5rem;
     padding: 1.25rem 2.53rem;
 
 }
 
-.button1:hover{
-cursor: pointer;
-background-color:hsl(192, 54%, 64%);
+.button1:hover {
+    cursor: pointer;
+    background-color: hsl(192, 54%, 64%);
 
 }
-.button2{
-background-color: hsl(268, 34%, 53%);
-margin-left: .5rem;
+
+.button2 {
+    background-color: hsl(268, 34%, 53%);
+    margin-left: .5rem;
     padding: 1.25rem 1.81rem;
 
 }
-.button2:hover{
-cursor: pointer;
-background-color:hsl(267, 64%, 71%);
+
+.button2:hover {
+    cursor: pointer;
+    background-color: hsl(267, 64%, 71%);
 
 }
-.line{
-    border-left:.5px solid   rgb(216, 216, 216);
+
+.line {
+    border-left: .5px solid rgb(216, 216, 216);
     height: 84px;
     transform: translateX(50%);
 
 }
 
-.cercle{
-    color:  hsl(240, 10%, 57%);
+.cercle {
+    color: hsl(240, 10%, 57%);
     font-size: .8rem;
-    border: .5px solid  rgb(216, 216, 216);
+    border: .5px solid rgb(216, 216, 216);
     border-radius: 100%;
     height: 56px;
     width: 56px;
-display:flex;
-justify-content:center;
-align-items:center;
-            background-color: hsl(0, 0%, 98%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: hsl(0, 0%, 98%);
 
 }
 
-.cercle h2{
+.cercle h2 {
     margin: 0;
 }
 
-.images{
-        display: flex;
+.images {
+    display: flex;
     justify-content: space-evenly;
-        flex-wrap: wrap;
+    flex-wrap: wrap;
     padding-top: 4rem;
 }
-.images img{
+
+.images img {
     border-radius: 5px;
     width: 16rem;
     margin-left: 2.96rem;
-        width: 15.13rem;
+    width: 15.13rem;
     height: 15.13rem;
 }
 
 
-.images img:first-of-type{
+.images img:first-of-type {
     margin-left: 0;
 
 }
-.secondText{
+
+.secondText {
     text-align: center;
     margin-top: 5rem;
 }
 
-.number2{
+.number2 {
     padding-top: 3.5rem;
     position: relative;
     top: 25px;
-        z-index: 2;
+    z-index: 2;
 }
 
-.section2{
-        display: flex;
-flex-direction: column;
-justify-content: center;    
-width: 100%;
-  background-image: url("./starter-code/assets/desktop/image-footer.jpg"), linear-gradient(hsl(192, 54%, 64%), hsl(192, 54%, 64%));
+.section2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    background-image: url("./starter-code/assets/desktop/image-footer.jpg"), linear-gradient(hsl(192, 54%, 64%), hsl(192, 54%, 64%));
 }
-.section2subsection{
+
+.section2subsection {
     display: flex;
     justify-content: space-around;
     align-items: center;
     min-height: 308px;
-  color: white;
+    color: white;
 }
 
 .section2subsection::before {
@@ -175,324 +190,351 @@ width: 100%;
     z-index: 1;
 }
 
-.section2subsection button{
-padding: 1rem 2rem 1rem 2rem;
-border-radius: 29px;
-color: white;
-font-weight:700;
-font-size: 1rem; 
-border: none;
-background-color: hsl(268, 34%, 53%);
+.section2subsection button {
+    padding: 1rem 2rem 1rem 2rem;
+    border-radius: 29px;
+    color: white;
+    font-weight: 700;
+    font-size: 1rem;
+    border: none;
+    background-color: hsl(268, 34%, 53%);
     z-index: 2;
-margin-right: 3rem;
-width: 12rem;
+    margin-right: 3rem;
+    width: 12rem;
 }
+
 /* Text mods */
 
-h1{
+h1 {
     font-size: 4rem;
     line-height: 4rem;
+    margin-top: 3rem;
     margin-bottom: 1rem;
     color: hsl(240, 21%, 20%);
+    width: 85%;
 }
 
-.mainText p{
+.mainText p {
     color: hsl(240, 10%, 57%);
-    padding: 0 1rem 0 1rem;
     font-size: 1.1rem;
+    margin-top: 1.13rem;
+
 }
 
-.number1{
+.number1 {
     padding-top: 6.88rem;
 }
 
-.secondText h3{
-color: hsl(192, 37%, 48%);
-letter-spacing: 3px;
-margin-top: 0;
+.secondText h3 {
+    color: hsl(192, 37%, 48%);
+    letter-spacing: 3px;
+    margin-top: 0;
 }
 
-span{
-color: hsl(192, 90%, 77%);
+span {
+    color: hsl(192, 90%, 77%);
 }
 
-.secondText h2{
-font-size: 2.5rem;
-padding: 0 32rem 0 32rem;
+.secondText h2 {
+    font-size: 2.5rem;
+    padding: 0 32rem 0 32rem;
 }
 
-.secondText p{
-padding: 0 28rem 0 28rem;
+.secondText p {
+    padding: 0 28rem 0 28rem;
     color: hsl(240, 10%, 57%);
-font-size: 1.051rem;
+    font-size: 1.051rem;
 
 }
-.section2subsection h2{
-font-size: 2.5rem;
-/* margin: 0 2rem 0 2rem; */
+
+.section2subsection h2 {
+    font-size: 2.5rem;
+    /* margin: 0 2rem 0 2rem; */
     z-index: 2;
-width: 25rem;
-margin-left: 3rem;
+    width: 25rem;
+    margin-left: 3rem;
 }
 
-.section2subsection p{
-/* margin: 0 2rem 0 2rem; */
+.section2subsection p {
+    /* margin: 0 2rem 0 2rem; */
     z-index: 2;
-width: 20rem;
+    width: 20rem;
 
 }
 
 @media screen and (max-width: 1300px) {
-    .buttons{
+    .buttons {
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
+
+    .button2 {
+        margin: 0;
+    }
+
+    .button1 {
+        margin: 0 0 1rem 0;
+    }
 }
- .button2{
-    margin: 0;
- }
- .button1{
-    margin: 0 0 1rem 0;
- }
-}
+
 @media screen and (max-width: 980px) {
-.section2subsection h2 {
-    width: 20rem;
-    margin-left: 1rem;
-}
-.section2subsection button {
-    margin-right: 1rem;
-}
+    .section2subsection h2 {
+        width: 20rem;
+        margin-left: 1rem;
+    }
+
+    .section2subsection button {
+        margin-right: 1rem;
+    }
 
 
 }
 
 @media screen and (max-width: 820px) {
-.section1imagedesk{
-    display: none;
-}
-.section1imagetablet{
-    display: block;
-    margin-top: 4rem;
-}
-.section1{
-    overflow: hidden;
-}
+    .section1imagedesk {
+        display: none;
+    }
 
-.section1imagetablet{
-    position: relative;
-}
-.section2{
-  background-image: url("./starter-code/assets/tablet/image-footer.jpg"), linear-gradient(hsl(192, 54%, 64%), hsl(192, 54%, 64%));
-}
-h1{
-    font-size: 3rem;
-    padding: 0 10rem 0 10rem;
-margin-top: 0;
-    line-height: 3rem;
-}
+    .section1imagetablet {
+        display: block;
+        margin-top: 4rem;
+    }
 
-.logo {
-    padding-top: 3rem;
-}
+    .section1 {
+        overflow: hidden;
+    }
 
-.buttons{
-    padding-top: 1rem;
-    display: inline;
+    .section1imagetablet {
+        position: relative;
+    }
 
-}
+    .section2 {
+        background-image: url("./starter-code/assets/tablet/image-footer.jpg"), linear-gradient(hsl(192, 54%, 64%), hsl(192, 54%, 64%));
+    }
 
-.button2 {
-    margin: 0 0 0 1rem;
-}
+    h1 {
+        font-size: 3rem;
+        padding: 0 10rem 0 10rem;
+        margin-top: 0;
+        line-height: 3rem;
+    }
 
-.section1subsection {
-    padding-top: 4.5rem;
-}
+    .logo {
+        padding-top: 3rem;
+    }
 
-.images img{
-    width: 10.25rem;
+    .buttons {
+        padding-top: 1rem;
+        display: inline;
+
+    }
+
+    .button2 {
+        margin: 0 0 0 1rem;
+    }
+
+    .section1subsection {
+        padding-top: 4.5rem;
+    }
+
+    .images img {
+        width: 10.25rem;
         height: 9.75rem;
-    margin-left: 0.7rem;
-}
+        margin-left: 0.7rem;
+    }
 
 
-.images img:first-of-type{
-    margin-left: 0;
+    .images img:first-of-type {
+        margin-left: 0;
 
-}
+    }
 
-.images{
-    padding: 0 2rem 0 2rem;
-}
+    .images {
+        padding: 0 2rem 0 2rem;
+    }
 
-.secondText {
-    margin-top: 3rem;
-}
+    .secondText {
+        margin-top: 3rem;
+    }
 
-.secondText h3{
-margin: 0;
-    font-size: 1rem;
-}
-.secondText h2{
-padding: 0 10rem 0 10rem;
-    margin: 1rem 0 2rem 0;
-}
-
-.secondText p{
-    padding: 0 5rem;
+    .secondText h3 {
+        margin: 0;
         font-size: 1rem;
-}
-.number1{
-    padding-top: 5rem;
-    padding-bottom: 4.19rem;
-}
+    }
 
-.section2subsection{
-    flex-direction: column;
-    height: 428px;
-}
+    .secondText h2 {
+        padding: 0 10rem 0 10rem;
+        margin: 1rem 0 2rem 0;
+    }
 
-.section2subsection::before {
-height: 428px;
-}
+    .secondText p {
+        padding: 0 5rem;
+        font-size: 1rem;
+    }
 
-.section2subsection h2{
-    padding: 0;
-text-align: center;
-    margin: 5rem 0 0 0;
-    width: 50%;
-}
-.section2subsection p{
-    width: 70%;
-text-align: center;
-    font-size: 1.1rem;
-}
+    .number1 {
+        padding-top: 5rem;
+        padding-bottom: 4.19rem;
+    }
 
-.section2subsection button{
-margin: 0 0 3rem 0;
-    padding: 1.25rem 2rem;
+    .section2subsection {
+        flex-direction: column;
+        height: 428px;
+    }
 
-}
+    .section2subsection::before {
+        height: 428px;
+    }
 
-.mainText p {
-    font-size: 1rem;
+    .section2subsection h2 {
+        padding: 0;
+        text-align: center;
+        margin: 5rem 0 0 0;
+        width: 50%;
+    }
+
+    .section2subsection p {
+        width: 70%;
+        text-align: center;
+        font-size: 1.1rem;
+    }
+
+    .section2subsection button {
+        margin: 0 0 3rem 0;
+        padding: 1.25rem 2rem;
+
+    }
+
+    .mainText p {
+        font-size: 1rem;
         width: 70%;
 
-}
+    }
 }
 
 @media screen and (max-width: 375px) {
-.section1imagetablet {
-    margin-top: 3.38rem;
-}
+    .section1imagetablet {
+        margin-top: 3.38rem;
+    }
 
-.section1subsection {
-    padding-top: 3rem;
-}
+    .section1subsection {
+        padding-top: 3rem;
+    }
 
-h1{
-    font-size: 2.5rem;
-    padding: 0 4rem;
-margin-top:0;
-    line-height: 2.5rem;
-}
-.section1imagetablet{
-    position: relative;
-    width: 410px;
-}
-.mainText{
-    padding: 0;
-}
-.section1{
-    overflow: hidden;
-}
+    h1 {
+        font-size: 2.5rem;
+        padding: 0 4rem;
+        margin-top: 0;
+        line-height: 2.5rem;
+    }
 
-.mainText p{
+    .section1imagetablet {
+        position: relative;
+        width: 410px;
+    }
 
-    font-size: 1rem;
-    line-height: 1.5rem;
-    padding:0;
+    .mainText {
+        padding: 0;
+    }
+
+    .section1 {
+        overflow: hidden;
+    }
+
+    .mainText p {
+
+        font-size: 1rem;
+        line-height: 1.5rem;
+        padding: 0;
         width: 80%;
 
-}
-.buttons{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.button1 {
-    padding: 1.25rem 2.53rem;
-    margin: 0;
-}
-.button2 {
-    padding: 1.25rem 1.817rem;
-    margin: 0;
-}
+    }
 
-.button1{
-    margin-bottom: 1rem;
-}
-.images img {
-    margin-left: 0;
-}
-
-.images {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto auto;
-    grid-gap: 1.5rem;
-    grid-auto-flow: column;
-    padding: 0;
-}
-.images img{
-    width: 9.438rem;
-    height: 8.94rem;
-}
-
-.secondText {
-    margin-top: 2.4rem;
+    .buttons {
         display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 
-.secondText h2{
-font-size: 2rem;
-    width: 90%;
-    padding: 0;
-    margin: 1rem auto;
-}
-.secondText p{
-    padding: 0 2.5rem 0 2.5rem;
-}
+    .button1 {
+        padding: 1.25rem 2.53rem;
+        margin: 0;
+    }
 
-.secondText h3 {
-    margin: 1rem auto;
-}
-.section2subsection p{
-width:20rem;
-text-align: center;
+    .button2 {
+        padding: 1.25rem 1.817rem;
+        margin: 0;
+    }
 
-}
+    .button1 {
+        margin-bottom: 1rem;
+    }
 
-.section2subsection h2 {
-    width: 80%;
+    .images img {
+        margin-left: 0;
+    }
+
+    .images {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto auto;
+        grid-gap: 1.5rem;
+        grid-auto-flow: column;
+        padding: 0;
+    }
+
+    .images img {
+        width: 9.438rem;
+        height: 8.94rem;
+    }
+
+    .secondText {
+        margin-top: 2.4rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .secondText h2 {
         font-size: 2rem;
-}
-.number1 {
-    padding-top: 4rem;
-    padding-bottom: 4.63rem;
-}
+        width: 90%;
+        padding: 0;
+        margin: 1rem auto;
+    }
 
-.number2 {
-    padding-top: 2rem;
-}
+    .secondText p {
+        padding: 0 2.5rem 0 2.5rem;
+    }
 
-.section2 {
-    /* background-image: url(./starter-code/assets/mobile/image-footer.jpg), linear-gradient(hsl(192, 54%, 64%), hsl(192, 54%, 64%)); */
+    .secondText h3 {
+        margin: 1rem auto;
+    }
+
+    .section2subsection p {
+        width: 20rem;
+        text-align: center;
+
+    }
+
+    .section2subsection h2 {
+        width: 80%;
+        font-size: 2rem;
+    }
+
+    .number1 {
+        padding-top: 4rem;
+        padding-bottom: 4.63rem;
+    }
+
+    .number2 {
+        padding-top: 2rem;
+    }
+
+    .section2 {
+        /* background-image: url(./starter-code/assets/mobile/image-footer.jpg), linear-gradient(hsl(192, 54%, 64%), hsl(192, 54%, 64%)); */
         background: url(./starter-code/assets/mobile/image-footer.jpg) no-repeat center/100%;
 
-}
+    }
 }
