--- a/index.css
+++ b/index.css
@@ -162,6 +162,7 @@ main {
     position: relative;
     top: 25px;
     z-index: 2;
+    padding-top: 2rem;
 }
 
 .section2 {
@@ -229,6 +230,8 @@ h1 {
     color: hsl(192, 37%, 48%);
     letter-spacing: 3px;
     margin-top: 0;
+    margin-bottom: 1rem;
+
 }
 
 span {
@@ -238,13 +241,15 @@ span {
 .secondText h2 {
     font-size: 2.5rem;
     padding: 0 32rem 0 32rem;
+    margin: 0;
+
 }
 
 .secondText p {
     padding: 0 28rem 0 28rem;
     color: hsl(240, 10%, 57%);
     font-size: 1.051rem;
-
+    margin: 1rem 0;
 }
 
 .section2subsection h2 {
