--- a/index.css
+++ b/index.css
@@ -1,545 +1,507 @@
 *,
 *::before,
 *::after {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 /* Main Format */
 
 body {
-    font-family: 'Red Hat Display', sans-serif;
-    margin: auto;
-    margin: 0;
-    padding: 0;
-    background-color: hsl(0, 0%, 98%);
-
+  font-family: "Red Hat Display", sans-serif;
+  margin: auto;
+  margin: 0;
+  padding: 0;
+  background-color: hsl(0, 0%, 98%);
 }
 
 main {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    flex-direction: column;
-    overflow: hidden;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  flex-direction: column;
+  overflow: hidden;
 }
 
+header {
+  display: flex;
+}
 /* Sub Format */
 
 .section1 {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .logo {
-    padding-top: 5rem;
+  padding-top: 5rem;
+  margin: auto;
 }
 
-.section1subsection {
-    display: flex;
-    padding-top: 3.8rem;
+.section-one {
+  display: flex;
+  padding-top: 3.8rem;
 }
 
-.section1imagetablet {
-    display: none;
+.section-one__hero {
+  display: none;
 }
 
-.imagedesk1 {
-    position: relative;
-    right: 30px;
-    height: 303px;
+.image-one {
+  position: relative;
+  right: 30px;
+  height: 303px;
 }
 
-.imagedesk2 {
-    position: relative;
-    left: 30px;
-    height: 303px;
-    margin-top: 3.4rem;
-
+.image-two {
+  position: relative;
+  left: 30px;
+  height: 303px;
+  margin-top: 3.4rem;
 }
 
-.mainText {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    padding: 0 4rem;
+.section-one__text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 0 4rem;
 }
 
 .buttons {
-    padding-top: 0.9rem
+  padding-top: 0.9rem;
 }
 
-.button1,
-.button2 {
-    border-radius: 29px;
-    color: white;
-    font-weight: 700;
-    font-size: 1rem;
-    border: none;
+.buttons__one,
+.buttons__two {
+  border-radius: 29px;
+  color: white;
+  font-weight: 700;
+  font-size: 1rem;
+  border: none;
 }
 
-.button1 {
-    background-color: hsl(192, 37%, 48%);
-    margin-right: .5rem;
-    padding: 1.25rem 2.53rem;
-
+.buttons__one {
+  background-color: hsl(192, 37%, 48%);
+  margin-right: 0.5rem;
+  padding: 1.25rem 2.53rem;
 }
 
-.button1:hover {
-    cursor: pointer;
-    background-color: hsl(192, 54%, 64%);
-
+.buttons__one:hover {
+  cursor: pointer;
+  background-color: hsl(192, 54%, 64%);
 }
 
-.button2 {
-    background-color: hsl(268, 34%, 53%);
-    margin-left: .5rem;
-    padding: 1.25rem 1.81rem;
-
+.buttons__two {
+  background-color: hsl(268, 34%, 53%);
+  margin-left: 0.5rem;
+  padding: 1.25rem 1.81rem;
 }
 
-.button2:hover {
-    cursor: pointer;
-    background-color: hsl(267, 64%, 71%);
-
+.buttons__two:hover {
+  cursor: pointer;
+  background-color: hsl(267, 64%, 71%);
 }
 
-.line {
-    border-left: .5px solid rgb(216, 216, 216);
-    height: 84px;
-    transform: translateX(50%);
-
+.number-one__line,
+.number-two__line {
+  border-left: 0.5px solid rgb(216, 216, 216);
+  height: 84px;
+  transform: translateX(50%);
 }
 
-.cercle {
-    color: hsl(240, 10%, 57%);
-    font-size: .8rem;
-    border: .5px solid rgb(216, 216, 216);
-    border-radius: 100%;
-    height: 56px;
-    width: 56px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: hsl(0, 0%, 98%);
-
+.number-two__cercle,
+.number-one__cercle {
+  color: hsl(240, 10%, 57%);
+  font-size: 0.8rem;
+  border: 0.5px solid rgb(216, 216, 216);
+  border-radius: 100%;
+  height: 56px;
+  width: 56px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: hsl(0, 0%, 98%);
 }
 
-.cercle h2 {
-    margin: 0;
+.number-two__cercle h2,
+.number-one__cercle h2 {
+  margin: 0;
 }
 
 .images {
     display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    padding-top: 4rem;
+    justify-content: space-between;
+    padding: 4rem 10.3125rem 0 10.3125rem;
 }
 
 .images img {
-    border-radius: 5px;
-    width: 16rem;
-    margin-left: 2.96rem;
-    width: 15.13rem;
-    height: 15.13rem;
+  border-radius: 5px;
+width: 22.974%;
 }
 
-
-.images img:first-of-type {
-    margin-left: 0;
-
+.section-two {
+  text-align: center;
+  margin-top: 5rem;
 }
 
-.secondText {
-    text-align: center;
-    margin-top: 5rem;
+.number-two {
+  z-index: 2;
+  padding-top: 2rem;
 }
 
-.number2 {
-    padding-top: 3.5rem;
-    position: relative;
-    top: 25px;
-    z-index: 2;
-    padding-top: 2rem;
+footer {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 308px;
+  color: white;
+  width: 100%;
+  background: url("./starter-code/assets/desktop/image-footer.jpg") no-repeat center/100%;
+  margin-top: -25px;
 }
 
-.section2 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 100%;
-    background-image: url("./starter-code/assets/desktop/image-footer.jpg"), linear-gradient(hsl(192, 54%, 64%), hsl(192, 54%, 64%));
+footer::before {
+  content: "";
+  width: 100%;
+  height: 308px;
+  position: absolute;
+  background-color: hsl(192, 37%, 48%);
+  opacity: 0.9;
+  z-index: 1;
 }
 
-.section2subsection {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    min-height: 308px;
-    color: white;
-}
-
-.section2subsection::before {
-    content: '';
-    width: 100%;
-    height: 308px;
-    position: absolute;
-    background-color: hsl(192, 37%, 48%);
-    opacity: 0.9;
-    z-index: 1;
-}
-
-.section2subsection button {
-    padding: 1rem 2rem 1rem 2rem;
-    border-radius: 29px;
-    color: white;
-    font-weight: 700;
-    font-size: 1rem;
-    border: none;
-    background-color: hsl(268, 34%, 53%);
-    z-index: 2;
-    margin-right: 3rem;
-    width: 12rem;
+footer button {
+  padding: 1rem 2rem 1rem 2rem;
+  border-radius: 29px;
+  color: white;
+  font-weight: 700;
+  font-size: 1rem;
+  border: none;
+  background-color: hsl(268, 34%, 53%);
+  z-index: 2;
+  margin-right: 3rem;
+  width: 12rem;
 }
 
 /* Text mods */
 
 h1 {
-    font-size: 4rem;
-    line-height: 4rem;
-    margin-top: 3rem;
-    margin-bottom: 1rem;
-    color: hsl(240, 21%, 20%);
-    width: 85%;
+  font-size: 4rem;
+  line-height: 4rem;
+  margin-top: 3rem;
+  margin-bottom: 1rem;
+  color: hsl(240, 21%, 20%);
+  width: 85%;
 }
 
-.mainText p {
-    color: hsl(240, 10%, 57%);
-    font-size: 1.1rem;
-    margin-top: 1.13rem;
-
+.section-one__text p {
+  color: hsl(240, 10%, 57%);
+  font-size: 1.1rem;
+  margin-top: 1.13rem;
 }
 
-.number1 {
-    padding-top: 6.88rem;
+.number-one {
+  padding-top: 6.88rem;
 }
 
-.secondText h3 {
-    color: hsl(192, 37%, 48%);
-    letter-spacing: 3px;
-    margin-top: 0;
-    margin-bottom: 1rem;
-
+.section-two h3 {
+  color: hsl(192, 37%, 48%);
+  letter-spacing: 3px;
+  margin-top: 0;
+  margin-bottom: 1rem;
 }
 
 span {
-    color: hsl(192, 90%, 77%);
+  color: hsl(192, 90%, 77%);
 }
 
-.secondText h2 {
-    font-size: 2.5rem;
-    padding: 0 32rem 0 32rem;
-    margin: 0;
-
+.section-two h2 {
+  font-size: 2.5rem;
+  padding: 0 32rem 0 32rem;
+  margin: 0;
 }
 
-.secondText p {
-    padding: 0 28rem 0 28rem;
-    color: hsl(240, 10%, 57%);
-    font-size: 1.051rem;
-    margin: 1rem 0;
+.section-two p {
+  padding: 0 28rem 0 28rem;
+  color: hsl(240, 10%, 57%);
+  font-size: 1.051rem;
+  margin: 1rem 0;
 }
 
-.section2subsection h2 {
-    font-size: 2.5rem;
-    /* margin: 0 2rem 0 2rem; */
-    z-index: 2;
-    width: 25rem;
-    margin-left: 3rem;
+footer h2 {
+  font-size: 2.5rem;
+  /* margin: 0 2rem 0 2rem; */
+  z-index: 2;
+  width: 25rem;
+  margin-left: 3rem;
 }
 
-.section2subsection p {
-    /* margin: 0 2rem 0 2rem; */
-    z-index: 2;
-    width: 20rem;
-
+footer p {
+  /* margin: 0 2rem 0 2rem; */
+  z-index: 2;
+  width: 20rem;
 }
 
 @media screen and (max-width: 1300px) {
-    .buttons {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
+  .buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
-    .button2 {
-        margin: 0;
-    }
+  .buttons__two {
+    margin: 0;
+  }
 
-    .button1 {
-        margin: 0 0 1rem 0;
-    }
+  .buttons__one {
+    margin: 0 0 1rem 0;
+  }
 }
 
 @media screen and (max-width: 980px) {
-    .section2subsection h2 {
-        width: 20rem;
-        margin-left: 1rem;
-    }
+  footer h2 {
+    width: 20rem;
+    margin-left: 1rem;
+  }
 
-    .section2subsection button {
-        margin-right: 1rem;
-    }
-
-
+  footer button {
+    margin-right: 1rem;
+  }
 }
 
-@media screen and (max-width: 820px) {
-    .section1imagedesk {
-        display: none;
-    }
+@media screen and (max-width: 1125px) {
+  .section-one__hero-desktop {
+    display: none;
+  }
 
-    .section1imagetablet {
-        display: block;
-        margin-top: 4rem;
-    }
+  .section-one__hero {
+    display: block;
+    margin: 4rem 0 4.5rem 0;
+  }
 
-    .section1 {
-        overflow: hidden;
-    }
+  .section-one__hero {
+    position: relative;
+  }
 
-    .section1imagetablet {
-        position: relative;
-    }
+  h1 {
+    font-size: 3rem;
+    padding: 0 8rem;
+    margin-top: 0;
+    line-height: 3rem;
+  }
 
-    .section2 {
-        background-image: url("./starter-code/assets/tablet/image-footer.jpg"), linear-gradient(hsl(192, 54%, 64%), hsl(192, 54%, 64%));
-    }
+  .logo {
+    padding-top: 3rem;
+  }
 
-    h1 {
-        font-size: 3rem;
-        padding: 0 10rem 0 10rem;
-        margin-top: 0;
-        line-height: 3rem;
-    }
+  .buttons {
+    padding-top: 1rem;
+    display: inline;
+  }
 
-    .logo {
-        padding-top: 3rem;
-    }
+.buttons__two {
+    margin: 0 0 4.125rem 0;
+}
 
-    .buttons {
-        padding-top: 1rem;
-        display: inline;
+  .buttons__one {
+    margin: 0;
+}
 
-    }
+  .section-one {
+    padding-top: 4rem;
+    flex-direction: column;
+  }
 
-    .button2 {
-        margin: 0 0 0 1rem;
-    }
+  .images img {
+    aspect-ratio: 41/39;
+    width: 23.296%;
+  }
 
-    .section1subsection {
-        padding-top: 4.5rem;
-    }
+  .images {
+    padding: 0 2rem 0 2rem;
+    gap: 0.7rem;
+  }
 
-    .images img {
-        width: 10.25rem;
-        height: 9.75rem;
-        margin-left: 0.7rem;
-    }
+  .section-two {
+    margin-top: 3rem;
+  }
 
+  .section-two h3 {
+    margin: 0;
+    font-size: 1rem;
+  }
 
-    .images img:first-of-type {
-        margin-left: 0;
+  .section-two h2 {
+    padding: 0 10rem 0 10rem;
+    margin: 1rem 0 2rem 0;
+  }
 
-    }
+  .section-two p {
+    padding: 0 6rem;
+    font-size: 1rem;
+  }
 
-    .images {
-        padding: 0 2rem 0 2rem;
-    }
+  .number-one {
+    padding-top: 5rem;
+    padding-bottom: 4.19rem;
+  }
 
-    .secondText {
-        margin-top: 3rem;
-    }
+  .number-two {
 
-    .secondText h3 {
-        margin: 0;
-        font-size: 1rem;
-    }
+    padding-top: 4rem;
+}
+  footer {
+    flex-direction: column;
+    height: 428px;
+      background: url("./starter-code/assets/tablet/image-footer.jpg") no-repeat center/100%;
+          justify-content: space-between;
+  }
 
-    .secondText h2 {
-        padding: 0 10rem 0 10rem;
-        margin: 1rem 0 2rem 0;
-    }
+  footer::before {
+    height: 428px;
+  }
 
-    .secondText p {
-        padding: 0 5rem;
-        font-size: 1rem;
-    }
+  footer h2 {
+    padding: 0;
+    text-align: center;
+    margin: 5.75rem 0 0 0;
+    width: 50%;
+  }
 
-    .number1 {
-        padding-top: 5rem;
-        padding-bottom: 4.19rem;
-    }
+  footer p {
+    width: 70%;
+    text-align: center;
+    font-size: 1.1rem;
+  }
 
-    .section2subsection {
-        flex-direction: column;
-        height: 428px;
-    }
+  footer button {
+    margin: 0 0 3rem 0;
+    padding: 1.25rem 2rem;
+  }
 
-    .section2subsection::before {
-        height: 428px;
-    }
-
-    .section2subsection h2 {
-        padding: 0;
-        text-align: center;
-        margin: 5rem 0 0 0;
-        width: 50%;
-    }
-
-    .section2subsection p {
-        width: 70%;
-        text-align: center;
-        font-size: 1.1rem;
-    }
-
-    .section2subsection button {
-        margin: 0 0 3rem 0;
-        padding: 1.25rem 2rem;
-
-    }
-
-    .mainText p {
-        font-size: 1rem;
-        width: 70%;
-
-    }
+  .section-one__text p {
+    font-size: 1rem;
+    width: 70%;
+  }
 }
 
 @media screen and (max-width: 375px) {
-    .section1imagetablet {
-        margin-top: 3.38rem;
-    }
 
-    .section1subsection {
-        padding-top: 3rem;
-    }
+  .section-one {
+    padding-top: 3.375rem;
+  }
 
-    h1 {
-        font-size: 2.5rem;
-        padding: 0 4rem;
-        margin-top: 0;
-        line-height: 2.5rem;
-    }
+  h1 {
+    font-size: 2.5rem;
+    padding: 0px 1rem;
+    margin-top: 0;
+    line-height: 2.5rem;
+  }
 
-    .section1imagetablet {
-        position: relative;
-        width: 410px;
-    }
+  .section-one__hero {
+position: relative;
+    width: 110.405%;
+    left: -3%;
+    margin: 0 0 3rem 0;
+  }
 
-    .mainText {
-        padding: 0;
-    }
+  .section-one__text {
+    padding: 0;
+  }
 
-    .section1 {
-        overflow: hidden;
-    }
+  .section1 {
+    overflow: hidden;
+  }
 
-    .mainText p {
+  .section-one__text p {
+    font-size: 1rem;
+    line-height: 1.5rem;
+    padding: 0;
+    width: 80%;
+  }
 
-        font-size: 1rem;
-        line-height: 1.5rem;
-        padding: 0;
-        width: 80%;
+  .buttons {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 
-    }
+  .buttons__one {
+    padding: 1.25rem 2.53rem;
+    margin: 0;
+  }
 
-    .buttons {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
+  .buttons__two {
+    padding: 1.25rem 1.817rem;
+    margin-bottom: 4.5rem;
+  }
 
-    .button1 {
-        padding: 1.25rem 2.53rem;
-        margin: 0;
-    }
+  .buttons__one {
+    margin-bottom: 1rem;
+  }
 
-    .button2 {
-        padding: 1.25rem 1.817rem;
-        margin: 0;
-    }
+  .images img {
+    margin-left: 0;
+  }
 
-    .button1 {
-        margin-bottom: 1rem;
-    }
+  .images {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto;
+    grid-gap: 1.5rem;
+    grid-auto-flow: column;
+    padding: 0 1.5rem;
+  }
 
-    .images img {
-        margin-left: 0;
-    }
+  .images img {
+    width: 100%;
+  }
 
-    .images {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: auto auto;
-        grid-gap: 1.5rem;
-        grid-auto-flow: column;
-        padding: 0;
-    }
+  .section-two {
+    margin-top: 4rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
-    .images img {
-        width: 9.438rem;
-        height: 8.94rem;
-    }
+  .section-two h2 {
+    font-size: 2rem;
+    width: 90%;
+    padding: 0;
+    margin: 1rem auto;
+  }
 
-    .secondText {
-        margin-top: 2.4rem;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
+  .section-two p {
+    padding: 0 2.5rem 0 2.5rem;
+  }
 
-    .secondText h2 {
-        font-size: 2rem;
-        width: 90%;
-        padding: 0;
-        margin: 1rem auto;
-    }
+  .section-two h3 {
+    margin: 1rem auto;
+  }
 
-    .secondText p {
-        padding: 0 2.5rem 0 2.5rem;
-    }
+  footer p {
+    width: 20rem;
+    text-align: center;
+  }
 
-    .secondText h3 {
-        margin: 1rem auto;
-    }
+  footer h2 {
+    width: 80%;
+    font-size: 2rem;
+  }
 
-    .section2subsection p {
-        width: 20rem;
-        text-align: center;
+  .number-one {
+    padding: 4rem 0;
+  }
 
-    }
+  .number-two {
+    padding-top: 3rem;
+  }
 
-    .section2subsection h2 {
-        width: 80%;
-        font-size: 2rem;
-    }
-
-    .number1 {
-        padding-top: 4rem;
-        padding-bottom: 4.63rem;
-    }
-
-    .number2 {
-        padding-top: 2rem;
-    }
-
-    .section2 {
-        /* background-image: url(./starter-code/assets/mobile/image-footer.jpg), linear-gradient(hsl(192, 54%, 64%), hsl(192, 54%, 64%)); */
-        background: url(./starter-code/assets/mobile/image-footer.jpg) no-repeat center/100%;
-
-    }
+  footer {
+    background: url(./starter-code/assets/mobile/image-footer.jpg) no-repeat
+      center/100%;
+  }
 }
